# RAGent

./: .gitignore  LICENSE  README.md  README.zh.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: chunk_index.json
docs/en/: architecture.md  data_model.md  development_guide.md  error_handling.md  index.md  interface_contract.md  mcp_setup.md  testing_strategy.md
docs/en/examples/: basic_query.md  chat_session.md  custom_skill.md
docs/zh/: architecture.md  data_model.md  development_guide.md  error_handling.md  index.md  interface_contract.md  mcp_setup.md  testing_strategy.md
docs/zh/examples/: basic_query.md  chat_session.md  custom_skill.md
examples/: react_hooks_guide.md
scripts/: benchmark.py  build_index.py  setup_mcp.sh
src/ragents/: __init__.py  __main__.py  errors.py
src/ragents/agent/: executor.py  hybrid_agent.py  planner.py  skill_router.py  state.py
src/ragents/cli/: __init__.py  main.py
src/ragents/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py  retry.py
src/ragents/mcp/: __init__.py  client_pool.py  fallback.py  server_manager.py  tool_discovery.py
tests/: conftest.py
tests/benchmarks/: test_retrieval_recall.py
tests/fixtures/: sample_chunks.py
tests/integration/: test_mcp_mock.py  test_rag_pipeline.py
tests/unit/: test_agent.py  test_chunker.py  test_config.py  test_embedder.py  test_exceptions.py  test_graph_index.py  test_keyword_index.py  test_reranker.py  test_retriever.py  test_retry.py  test_schema.py  test_skill_router.py  test_validators.py  test_vector_index.py
(+35 files in other folders)
