[project]
name = "ragents"
version = "0.1.0"
description = "RAG-powered agent for code intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "RAGent Team"},
]
keywords = ["rag", "agent", "mcp", "llm", "retrieval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=24.0",
  "rich>=13.0",
  "requests>=2.31",
  "numpy>=1.24",
  "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
  "ruff>=0.4",
  "mypy>=1.10",
]
llm = [
  "openai>=1.0",
  "anthropic>=0.25",
]
local = [
  "sentence-transformers>=2.5",
]

[project.scripts]
ragent = "ragents.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragents"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
